objects/New_Part_Creation_Form__c.object
<CustomObject>
    <fields>
        <fullName>AM_Approval_Status__c</fullName>
        <label>AM Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>BASE_Device__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>BASE_Device__r.Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>New_Part_Creation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Implementation_Date__c</fullName>
        <label>Actual Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Recipient_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Recipient_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Recipient_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Recipient_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Recipient_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Recipient_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field indicatest the current approval status of the record</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_Forms9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automotive_Device__c</fullName>
        <label>Automotive Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automotive_Grade__c</fullName>
        <label>Automotive Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grade 0</fullName>
                </value>
                <value>
                    <fullName>Grade 1</fullName>
                </value>
                <value>
                    <fullName>Grade 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BASE_Device_ID__c</fullName>
        <formula>BASE_Device__r.Id</formula>
        <label>BASE Device ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASE_Device__c</fullName>
        <inlineHelpText>System will copy the basic Device information like Process Id, Export Control, IP Declaration, Mask Set Title, Automotive Device, etc. based on the selected SFDC Reference Device.</inlineHelpText>
        <label>SFDC Base Device</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Device__c.Device_Type__c</field>
                <operation>equals</operation>
                <value>Base</value>
            </filterItems>
            <filterItems>
                <field>Device__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>NPC Forms</relationshipLabel>
        <relationshipName>New_Part_Creation_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ByPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_DID__c</fullName>
        <label>CRM DID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Required_Action__c</fullName>
        <label>CSR Required Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This case is Created by the System to manage the Device Movement from NPC Request in SFDC.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>NPC Forms</relationshipLabel>
        <relationshipName>NPC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <description>Used in PI/YE Approval page</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Masks__c</fullName>
        <label>Count of Masks</label>
        <summaryForeignKey>Mask__c.New_Part_Creation_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Forecast_Tapeout_Date__c</fullName>
        <label>Current Forecast Tapeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>BASE_Device__r.Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Rep_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Rep 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_FormsFL00</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Rep 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_FormsFL4q</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_to_Ship_Reticle_to_Mask_Shop__c</fullName>
        <label>Date to Ship Reticle to Mask Shop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Mask_Set_Title__c</fullName>
        <formula>BASE_Device__r.Device_Mask_Set_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Mask Set Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Status__c</fullName>
        <label>Device Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <formula>TEXT(BASE_Device__r.Device_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECN_Change_Date__c</fullName>
        <label>Expected Customer Name Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAE_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_Forms_FAE1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAE_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_Forms_FAE2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAE_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_Forms_FAE3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generated_Device_Tapeout_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set it true When NPC generated Device is staged from Design-in to Tapeout</description>
        <label>Generated Device Tapeout Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_reticle_available__c</fullName>
        <label>Is Full Set Reticle Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes,at GF</fullName>
                </value>
                <value>
                    <fullName>Yes Return to Customer</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Sync_to_PLM_Status__c</fullName>
        <label>Last Sync to PLM Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litho_Status__c</fullName>
        <label>Litho Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litho_Validate_Reticle_is_in_GF__c</fullName>
        <label>Litho Validate Reticle is in GF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <inlineHelpText>Mask Set Title has different validation rules for different tapeout type.For GlobalShuttle &amp; CustomizedShuttle MPW, Device Mask Set Title must be same as MPW Train Number.</inlineHelpText>
        <label>Mask Set Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Shop_Address__c</fullName>
        <label>Mask Shop Address</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mask_Shop_Site__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>TAIWAN MASK CORP (11,Innovation Rd.1, Science-Base Industrial Park , Hsinchu, Taiwan, ROC)</fullName>
                </value>
                <value>
                    <fullName>Photronics DNP Mask Corporation - Fab 1A (1F, No.2, Li-Hsin Rd., Science Park, Hsin-Chu City, 30078, Taiwan R.O.C)</fullName>
                </value>
                <value>
                    <fullName>Photronics DNP Mask Corporation - Fab 1D (1F, No.2, Li-Hsin Rd., Science Park, Hsin-Chu City, 30078, Taiwan R.O.C)</fullName>
                </value>
                <value>
                    <fullName>Photronics Korea Limited (15, 2gongdan 3-ro, Seobuk-gu, Cheonan-si, Chungcheongnam-do, Korea 31075)</fullName>
                </value>
                <value>
                    <fullName>HOYA CORPORATION Mask Section (1375 KAWAGUCHI-MACHI, HACHIOJI-SHI TOKYO 193-8525 JAPAN)</fullName>
                </value>
                <value>
                    <fullName>Toppan Photomasks Korea Ltd (91, Wonjeok-ro 290 beon-gil, Sindun-myeon Icheon-si, Gyeonggi-do, 467-842 Republic of Korea)</fullName>
                </value>
                <value>
                    <fullName>Toppan Chunghwa Electronics Co Ltd (1127 - 3 Hopin Road Padeh City, Taiwan)</fullName>
                </value>
                <value>
                    <fullName>Toppan Printing, Co,Ltd. Asaka Plant (Semiconductor Solution Division 7-21-33, Nobidome Niiza-Shi Saitama 352-8652)</fullName>
                </value>
                <value>
                    <fullName>Toppan Photomasks Germany GMBH (Raehnitzer Allee 9 Dresden, Germany 1109)</fullName>
                </value>
                <value>
                    <fullName>Advanced Mask Technology Center GmbH &amp; Co. KG (Raehnitzer Allee 9 Dresden, Germany 1109)</fullName>
                </value>
                <value>
                    <fullName>Dai Nippon Printing Co., Ltd (DNP Fine Optronics 2-2-1 Fukuoka, Fujimino-shi Saitama 356-8507 JAPAN)</fullName>
                </value>
                <value>
                    <fullName>Advanced Mask Technology Center GmbH &amp; Co. KG (Raehnitzer Allee 9  Dresden, Germany  1109)</fullName>
                </value>
                <value>
                    <fullName>Dai Nippon Printing Co., Ltd (DNP Fine Optronics   2-2-1 Fukuoka, Fujimino-shi Saitama 356-8507 JAPAN)</fullName>
                </value>
                <value>
                    <fullName>Photronics DNP Mask Corporation - Fab 1A (1F, No.2, Li-Hsin Rd., Science Park,  Hsin-Chu City, 30078, Taiwan R.O.C)</fullName>
                </value>
                <value>
                    <fullName>Toppan Chunghwa Electronics Co Ltd (1127 - 3   Hopin Road  Padeh City, Taiwan)</fullName>
                </value>
                <value>
                    <fullName>Toppan Photomasks Germany GMBH (Raehnitzer Allee 9  Dresden, Germany 1109)</fullName>
                </value>
                <value>
                    <fullName>Toppan Photomasks Korea Ltd (91, Wonjeok-ro 290 beon-gil, Sindun-myeon Icheon-si, Gyeonggi-do, 467-842  Republic of Korea)</fullName>
                </value>
                <value>
                    <fullName>Toppan Printing, Co,Ltd. Asaka Plant (Semiconductor Solution Division 7-21-33, Nobidome  Niiza-Shi  Saitama 352-8652)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mask_Shop_Name__c</fullName>
        <label>Mask Shop Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>TMC</fullName>
                </value>
                <value>
                    <fullName>Toppan</fullName>
                </value>
                <value>
                    <fullName>AMTC</fullName>
                </value>
                <value>
                    <fullName>DNP</fullName>
                </value>
                <value>
                    <fullName>Photronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mask_Shop_Site__c</fullName>
        <label>Mask Shop Site</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mask_Shop_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TMC</fullName>
                </value>
                <value>
                    <fullName>PDMC - 1A</fullName>
                </value>
                <value>
                    <fullName>PDMC - 1D</fullName>
                </value>
                <value>
                    <fullName>PKL</fullName>
                </value>
                <value>
                    <fullName>Hoya Hachioji</fullName>
                </value>
                <value>
                    <fullName>Toppan Icheon</fullName>
                </value>
                <value>
                    <fullName>TCE</fullName>
                </value>
                <value>
                    <fullName>Toppan Asaka</fullName>
                </value>
                <value>
                    <fullName>Toppan Dresden</fullName>
                </value>
                <value>
                    <fullName>AMTC</fullName>
                </value>
                <value>
                    <fullName>DNP Japan</fullName>
                </value>
                <value>
                    <fullName>Hoya site 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Order_Create__c</fullName>
        <label>Min Order Create</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one time</fullName>
                </value>
                <value>
                    <fullName>/Year</fullName>
                </value>
                <value>
                    <fullName>/Quarter</fullName>
                </value>
                <value>
                    <fullName>/Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_Order_qty_agreement_customer_Text__c</fullName>
        <label>Min Order qty agreement with customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Order_qty_agreement_with_customer__c</fullName>
        <label>Min Order qty agreement with customer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPC_Device_Reactivation_Status__c</fullName>
        <formula>IF( OR(ISPICKVAL(NPC_Form_Status__c, &apos;Pending Submission&apos;),ISPICKVAL(NPC_Form_Status__c, &apos;Draft&apos;)) , &apos;Pending Justification &apos;,
IF(ISPICKVAL( NPC_Form_Status__c, &apos;Pending Resubmission&apos;),&apos;Pending Resubmission&apos;,
IF(ISPICKVAL( NPC_Form_Status__c, &apos;Pending Litho Verification&apos;),&apos;Pending Litho Verification&apos;,
IF(ISPICKVAL( NPC_Form_Status__c, &apos;Pending CE Approval&apos;),&apos;Pending CE Approval&apos;,
IF(ISPICKVAL( NPC_Form_Status__c, &apos;Pending AM Approval&apos;),&apos;Pending AM Approval&apos;,
IF(AND(ISPICKVAL(NPC_Form_Status__c, &apos;In Execution&apos;),ISBLANK(Planned_Implementation_Date__c)), &apos;Pending Assessment&apos;,
IF(AND(ISPICKVAL(NPC_Form_Status__c, &apos;In Execution&apos;),NOT(ISBLANK(Planned_Implementation_Date__c))), &apos;In Execution&apos;,
IF(ISPICKVAL(NPC_Form_Status__c, &apos;Not Executed&apos;), &apos;Not Executed&apos;,
IF(ISPICKVAL(NPC_Form_Status__c, &apos;Executed&apos;), &apos;Executed&apos;,&apos;&apos;))
)))))))</formula>
        <label>NPC Device Reactivation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPC_Form_Status__c</fullName>
        <label>NPC Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending CE Approval</fullName>
                </value>
                <value>
                    <fullName>In Execution</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Not Executed</fullName>
                </value>
                <value>
                    <fullName>Pending Resubmission</fullName>
                </value>
                <value>
                    <fullName>Pending PID Reassignment</fullName>
                </value>
                <value>
                    <fullName>Pending Mask Layer Addition by FE</fullName>
                </value>
                <value>
                    <fullName>Pending Submission</fullName>
                    <default>true</default>
                    <label>Pending Submission</label>
                </value>
                <value>
                    <fullName>Pending Litho Verification</fullName>
                </value>
                <value>
                    <fullName>Pending AM Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPC_Form_Submitted_Date__c</fullName>
        <label>NPC Form Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPC_Form_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populates the portal user who submits the NPC form from portal</description>
        <label>NPC Form Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NRE_25K_USD_Is_Acknowledged_by_Customer__c</fullName>
        <label>NRE 25K USD Is Acknowledged by Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NRE_25K_USD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRE 25K USD Is Acknowledged by Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRE_Comments__c</fullName>
        <label>NRE Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Customer_Name__c</fullName>
        <label>New Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_Short_Name__c</fullName>
        <label>New Account Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Fab__c</fullName>
        <label>New Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Part_ID__c</fullName>
        <label>New Part ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_3_Years_1__c</fullName>
        <label>Next 3 Years 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_3_Years_2__c</fullName>
        <label>Next 3 Years 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_3_Years_3__c</fullName>
        <label>Next 3 Years 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_AM_Approvers__c</fullName>
        <label>No of AM Approvers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Approvers__c</fullName>
        <label>No of Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Customer_Rep_Approvers__c</fullName>
        <label>No of Customer Rep Approvers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_FAE_Approvers__c</fullName>
        <label>No of FAE Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_LithoApprovers__c</fullName>
        <label>No of Litho Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_PIYE_Approvers__c</fullName>
        <label>No of PIYE Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_PI_YE_Assignes__c</fullName>
        <label>No of PI/YE Assignes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_SMO_Users__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of SMO Users</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Group__c</fullName>
        <inlineHelpText>The account team will be notified, any additional people to notify please input email address separated by semi colon &quot;;&quot;</inlineHelpText>
        <label>Additional email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>System will copy the basic Device information like Process Id, Export Control, IP Declaration, Mask Set Title, Automotive Device, etc. based on the selected SFDC Reference Device.</inlineHelpText>
        <label>Device ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Device__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>NPC Forms (Originating Device)</relationshipLabel>
        <relationshipName>NPC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Part_Creation_FormsBnZl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PID_Status__c</fullName>
        <inlineHelpText>Process Status</inlineHelpText>
        <label>Available to Sell / Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIYE_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PIYE Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIYE_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PIYE Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIYE_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PIYE Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PI_YE_Approval_Status__c</fullName>
        <label>PI/YE Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status 1</fullName>
                </value>
                <value>
                    <fullName>Status 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_YE_Update_Status__c</fullName>
        <label>PI/YE Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status 1</fullName>
                </value>
                <value>
                    <fullName>Status 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLM_Error_Message__c</fullName>
        <label>PLM Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLM_Sync_Status__c</fullName>
        <label>PLM Sync Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_3_Years_1__c</fullName>
        <label>Past_3_Years_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_3_Years_2__c</fullName>
        <label>Past_3_Years_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_3_Years_3__c</fullName>
        <label>Past_3_Years_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Implementation_Date__c</fullName>
        <label>Planned Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Device_AM2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Device AM2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_FormsGoBT</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>